# csvqc

./: Cargo.toml  HACKING.md  README.md
src/: check.rs  main.rs
src/check/: checkfailure.rs
src/check/checkfailure/: location.rs
