[package]
name = "gnqc-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0.37"
log = "0.4.8"
env_logger = "0.8.4"
bstr_parse = "0.1.0"
csv = "1.2.1"
genawaiter = { version = "0.99.1", default-features = false }
regex = "1.4.6"
lazy_static = "1.4.0"
